snapshots/com/wadpam/openserver/errors/2-SNAPSHOT/errors-2-20121019.040106-1.jar.sha1
98e4a5478ab31ed58251da945200faef9f0640b0